Refactored to add the ability to perform parallel processing
We use 4 fixed thread pools to divide and conquer the multiple processes input to the program.

Simple benchmarking is added to display the time in ms it takes to perform a process.

Refactored code to separate manual and batch processing, while keeping reusable code together.

Used a list of futures to track the progress of concurrent tasks.  We can see reports of what job failed and why it failed via future.get(). Looping through all tasks with future.get() also allows us to pause/block the main thread until all tasks are flagged as complete or have an error thrown.
This will be useful knowledge when building other concurrent systems.

It is important to remember that you must submit all jobs to the executor queue before calling future.get(). Prematurely calling the method kills concurrency and will heavily slow down the program by reverting to serial execution.