@@ -3,7 +3,7 @@ import java.awt.RenderingHints;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import javax.imageio.ImageIO;
 
 public class DiscordImageResizer {
@@ -24,7 +24,7 @@ public class DiscordImageResizer {
     public static BufferedImage downloadImage(String imageUrl) throws IOException {
         //Download the image from given URL without resizing
         //We use bufferedimage so we can manipulate the image before returning it
-        BufferedImage image = ImageIO.read(new URL(imageUrl));
+        BufferedImage image = ImageIO.read(URI.create(imageUrl).toURL());
 
         //Check if image was successfully downloaded, else throw an exception
         if (image == null) {
@@ -34,31 +34,31 @@ public class DiscordImageResizer {
     }
 
 
-public static BufferedImage resizeImage(
+    public static BufferedImage resizeImage(
         BufferedImage originalImage, int targetWidth, int targetHeight) {
 
-    //First center crop the image to make it square, since Discord avatars are square
-    //Plus, this prevents distortion when resizing non-square images
-    BufferedImage croppedImage = centerCrop(originalImage);
+        //First center crop the image to make it square, since Discord avatars are square
+        //Plus, this prevents distortion when resizing non-square images
+        BufferedImage croppedImage = centerCrop(originalImage);
 
-    //Perform a multi-step downscaling to maintain quality (reduce aliasing) as we reach our target size
-    int w = croppedImage.getWidth();
-    int h = croppedImage.getHeight();
-    BufferedImage img = croppedImage;
+        //Perform a multi-step downscaling to maintain quality (reduce aliasing) as we reach our target size
+        int w = croppedImage.getWidth();
+        int h = croppedImage.getHeight();
+        BufferedImage img = croppedImage;
 
-    //Reduce size by half until we are at or just below target size
-    while (w / 2 >= targetWidth && h / 2 >= targetHeight) {
-        w /= 2;
-        h /= 2;
+        //Reduce size by half until we are at or just below target size
+        while (w / 2 >= targetWidth && h / 2 >= targetHeight) {
+            w /= 2;
+            h /= 2;
 
-        BufferedImage tmp = new BufferedImage(w, h, BufferedImage.TYPE_INT_ARGB);
+            BufferedImage tmp = new BufferedImage(w, h, BufferedImage.TYPE_INT_ARGB);
 
-        Graphics2D g = tmp.createGraphics();
-        g.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BILINEAR);
-        g.drawImage(img, 0, 0, w, h, null);
-        g.dispose();
+            Graphics2D g = tmp.createGraphics();
+            g.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BILINEAR);
+            g.drawImage(img, 0, 0, w, h, null);
+            g.dispose();
 
-        img = tmp;
+            img = tmp;
     }
 
     //Final resize to target dimensions using high-quality bicubic interpolation
@@ -83,22 +83,21 @@ public static BufferedImage resizeImage(
     g2d.dispose();
 
     return finalImage;
-}
+    }
 
-public static BufferedImage centerCrop(BufferedImage img) {
-    //Determine the smallest x or y dimension. This will be the max size of the square crop's sides
-    int size = Math.min(img.getWidth(), img.getHeight());
+    public static BufferedImage centerCrop(BufferedImage img) {
+        //Determine the smallest x or y dimension. This will be the max size of the square crop's sides
+        int size = Math.min(img.getWidth(), img.getHeight());
 
-    int x = (img.getWidth() - size) / 2;
-    int y = (img.getHeight() - size) / 2;
+        int x = (img.getWidth() - size) / 2;
+        int y = (img.getHeight() - size) / 2;
 
-    return img.getSubimage(x, y, size, size);
-}
+        return img.getSubimage(x, y, size, size);
+    }
 
-//Helper method to save to disk (wont be used in the main code but useful for testing)
-public static void saveImage(BufferedImage img, File outputFile) throws IOException {
+    //Helper method to save to disk (wont be used in the main code but useful for testing)
+    public static void saveImage(BufferedImage img, File outputFile) throws IOException {
         ImageIO.write(img, "png", outputFile);
-}
-
+    }
 
 }
